# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world
    3. /etc/portage/virtuals is _USER_ configs only. Do not copy the old file.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  28 Jul 2004; Masatomo Nakano <nakano@gentoo.org> bin/emergehelp.py,
  man/emerge.1: Added explanation of --newuse to manpage/help. 
  Added information of --verbose to manpage.

  27 Jul 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py:
  Reversed the order of profile virtuals (dirVirtuals) so that a cascading
  profile's virtuals are stacked in the correct order.

  26 Jul 2004; Brian Harring <ferringb@gentoo.org> bin/emerge:
  Removed the `which blah` calls- A) stage1 lacks which, B) which searches
  $PATH- all sane shells do this already when handed a command not that 
  isn't absolute path.  These which calls were used in 
  commands.getstatusoutput() calls, which starts up a shell with
  the arg passed to the shell, so "`which blar` args" isn't needed.

  26 Jul 2004; Brian Harring <ferringb@gentoo.org> bin/repoman:
  Added file.executable check- ebuilds, digests, Manifest, ChangeLog, and
  metadata.xml don't need the executable bit set.  CVS preserves it upon 
  commit, so we do the check prior to commit.  (#55647)

  26 Jul 2004; Brian Harring <ferringb@gentoo.org> bin/emerge:
  Removed the hardcoding of uname for emerge info, using which to find it
  instead.

  26 Jul 2004; Brian Harring <ferringb@gentoo.org> bin/repoman:
  Added check to ensure manifest recommit is at least possible when 
  committing, and corrected handling of CVS/Root files for OSX machines.
  Removed readline import, doesn't seem to be used at all.

  26 Jul 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge pym/portage.py: