@@ -9,6 +9,10 @@
     4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
        It is for convenience. Do not mistake this for the actual file.
 
+  28 Jul 2004; Masatomo Nakano <nakano@gentoo.org> pym/portage.py:
+  Added ._cfg* file for updating /etc/portage/packages.* during global
+  update.
+
   28 Jul 2004; Masatomo Nakano <nakano@gentoo.org> bin/emergehelp.py,
   man/emerge.1: Added explanation of --newuse to manpage/help. 
   Added information of --verbose to manpage.
